--- a/appointa/index.html
+++ b/appointa/index.html
@@ -926,16 +926,13 @@
         <section id="personas">
 
           <div class="blankHS"></div>
+
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Personas</p>
-                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow"> Personas <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
@@ -956,16 +953,14 @@
         <div class="blankHS"></div>
         <section id="customerJoutney">
 
+
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Customer journey map</p>
-                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow"> Customer journey map <img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
@@ -1081,16 +1076,15 @@
         </div>
         <div class="blankHXS"></div>
         <section id="keyPainPoints">
+
+
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Identify key pain points</p>
-                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow"> Identify key pain points <img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
@@ -1120,19 +1114,16 @@
 
           <section id="affinityMap">
             <!-- Arrow -->
-            <div class="wrapper">
-              <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="Grid">
-                      <p class="tArrow"> Affinity diagrams</p>
-                      <img class="seArrow" src="../icon/arrow-se.svg" alt="arrow">
-                    </div>
-                  </div>
+            <div class="Grid Grid--full wrapper">
+              <div class="Grid-cell">
+                <div class="element">
+                  <h2 class="tArrow"> Affinity diagrams<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                  </h2>
                 </div>
               </div>
             </div>
             <!-- Arrow -->
+
             <div class="wrapper">
               <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
                 <div class="Grid-cell">
@@ -1148,16 +1139,13 @@
             <div class="blankHS"></div>
           </section>
           <section id="earlyConcepts">
+
             <!-- Arrow -->
-            <div class="wrapper">
-              <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="Grid">
-                      <p class="tArrow">Early concepts</p>
-                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                    </div>
-                  </div>
+            <div class="Grid Grid--full wrapper">
+              <div class="Grid-cell">
+                <div class="element">
+                  <h2 class="tArrow"> Early concepts<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                  </h2>
                 </div>
               </div>
             </div>
@@ -1320,21 +1308,18 @@
 
 
         <section id="opportunities" class="colorBgAPPOINTA">
-
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Turn Insights into Opportunities</p>
-                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow"> Turn Insights into Opportunities<img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
           <!-- Arrow -->
+
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
@@ -1387,19 +1372,16 @@
         </section>
         <section id="priorityMatrix">
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Priority matrix</p>
-                    <img class="seArrow" src="../icon/arrow-se.svg" alt="arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow"> Priority matrix <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
           <!-- Arrow -->
+
           <div class="wrapper">
             <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
               <div class="Grid-cell">
@@ -1431,15 +1413,11 @@
         </section>
         <section id="useTypes">
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Personas</p>
-                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow"> Personas <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
@@ -1509,16 +1487,13 @@
 
 
         <section id="userFlow">
+
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Key flows</p>
-                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow"> Key flows <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
@@ -1562,21 +1537,17 @@
           <!-- user flow -->
         </section>
         <section id="informationArchitecture">
-
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Site Map</p>
-                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Site Map <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
           <!-- Arrow -->
+
           <div class="blankHS"></div>
           <!-- Sitemap -->
           <div class="Grid Grid--full u-textCenter wrapper">
@@ -1591,19 +1562,16 @@
 
         <section id="sketch">
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Lo-fi Sketch</p>
-                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Lo-fi Sketch <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
           <!-- Arrow -->
+
           <div class="blankHS"></div>
           <!-- wireframes -->
           <div class="Grid Grid--full u-textCenter wrapper">
@@ -1633,16 +1601,14 @@
         <div class="blankHS"></div>
 
         <section id="mfScreens">
+
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Mid-fi screen flows &#38; testing</p>
-                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Mid-fi screen flows &#38; testing <img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
@@ -1791,19 +1757,17 @@
         </section>
         <section id="mfScreensUpdate">
           <!-- Arrow -->
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="Grid">
-                    <p class="tArrow"> Mid-fi screen iteration</p>
-                    <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                  </div>
-                </div>
+          <div class="Grid Grid--full wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Mid-fi screen iteration <img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
           <!-- Arrow -->
+
           <div class="blankHS"></div>
           <div class="wrapper">
             <div class="Grid Grid--full u-textCenter">
@@ -1949,16 +1913,13 @@
           </div>
           <div class="blankHS"></div>
           <section id="screens">
+
             <!-- Arrow -->
-            <div class="wrapper">
-              <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="Grid">
-                      <p class="tArrow"> Hi-fi design</p>
-                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                    </div>
-                  </div>
+            <div class="Grid Grid--full wrapper">
+              <div class="Grid-cell">
+                <div class="element">
+                  <h2 class="tArrow">Hi-fi design <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                  </h2>
                 </div>
               </div>
             </div>
@@ -2073,21 +2034,17 @@
           </section>
           <div class="blankHS"></div>
           <section id="designsystem">
-
             <!-- Arrow -->
-            <div class="wrapper">
-              <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="Grid">
-                      <p class="tArrow"> Design system</p>
-                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                    </div>
-                  </div>
+            <div class="Grid Grid--full wrapper">
+              <div class="Grid-cell">
+                <div class="element">
+                  <h2 class="tArrow">Design system <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                  </h2>
                 </div>
               </div>
             </div>
             <!-- Arrow -->
+
             <div class="wrapper">
               <div class="flex-container cardAPPOINTA">
                 <div class="left-zone">
@@ -2122,21 +2079,17 @@
 
           </section>
           <section id="components">
-
             <!-- Arrow -->
-            <div class="wrapper">
-              <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-                <div class="Grid-cell">
-                  <div class="element">
-                    <div class="Grid">
-                      <p class="tArrow"> UI Components</p>
-                      <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                    </div>
-                  </div>
+            <div class="Grid Grid--full wrapper">
+              <div class="Grid-cell">
+                <div class="element">
+                  <h2 class="tArrow">UI Components <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                  </h2>
                 </div>
               </div>
             </div>
             <!-- Arrow -->
+
             <div class="wrapper">
               <div class="flex-container cardAPPOINTA">
                 <div class="left-zone">
@@ -2224,17 +2177,12 @@
       <!-- takeaways -->
       <section id="takeaways">
 
-
         <!-- Arrow -->
-        <div class="wrapper">
-          <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
-            <div class="Grid-cell">
-              <div class="element">
-                <div class="Grid">
-                  <p class="tArrow">Outcomes</p>
-                  <img class="seArrow" src="../icon/arrow-se.svg" alt="se-arrow">
-                </div>
-              </div>
+        <div class="Grid Grid--full wrapper">
+          <div class="Grid-cell">
+            <div class="element">
+              <h2 class="tArrow">Outcomes <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
             </div>
           </div>
         </div>
