--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -1801,17 +1801,46 @@
           <!-- Arrow -->
           <div class="blankHXS"></div>
           <div class="element">
-            <div class="ClipboardBoxIconOnly">
+            <div class="iconSM">
+              <button class="WidthHeighMax centerVH" contenteditable="true">
+                <img class="iconXS" src="../icon/in.svg" alt="LinkedIn">
+                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+              </button>
+            </div>
+          </div>
+
+          <div class="element">
+            <div class="ClipboardBoxIconOnly iconM">
               <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="iconXSXXX" src="../icon/in.svg" alt="LinkedIn">
+                <img class="iconXS" src="../icon/in.svg" alt="LinkedIn">
+                <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
+              </button>
+            </div>
+          </div>
+
+          <div class="element">
+            <div class="ClipboardBoxIconOnly iconM">
+              <button class="ClipboardIconOnly" contenteditable="true">
+                <img class="iconXS" src="../icon/mail.svg" alt="LinkedIn">
+                <p class="clickIconCopy">vickyw.design@gmail.com</p>
+              </button>
+            </div>
+          </div>
+
+
+
+          <div class="element">
+            <div class="ClipboardBoxIconOnly iconSM">
+              <button class="ClipboardIconOnly" contenteditable="true">
+                <img class="iconXS" src="../icon/in.svg" alt="LinkedIn">
                 <p class="clickIconCopy">https://www.linkedin.com/in/vicky-wyq/</p>
               </button>
             </div>
           </div>
           <div class="element">
-            <div class="ClipboardBoxIconOnly">
+            <div class="ClipboardBoxIconOnly iconSM">
               <button class="ClipboardIconOnly" contenteditable="true">
-                <img class="footer-logo" src="../icon/mail.svg" alt="LinkedIn">
+                <img class="iconXS" src="../icon/mail.svg" alt="LinkedIn">
                 <p class="clickIconCopy">vickyw.design@gmail.com</p>
               </button>
             </div>
@@ -3164,25 +3193,40 @@
   <!--back to top-->
   <!--footer-->
   <footer class="GreyBg100">
-    <div class="element">
-      <div class="footer">
-        <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
-        <div class="footer-right">
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-            <img class="footer-logo" src="../icon/in.svg" alt="LinkedIn">
-          </a>
-          <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="footer-logo" src="../icon/git.svg" alt="GitHub" title="GitHub">
-          </a>
-          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-            <img class="footer-logo" src="../icon/Codepen.svg" alt="CodePen">
-          </a>
-          <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="footer-logo" src="../icon/ins.svg" alt="Instagram" title="Instagram">
-          </a>
+    <div class="blankHM"></div>
+
+    <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
+      <div class="Grid-cell">
+          <div class="element">
+            <div class="element">
+
+          <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
+</div>
+        </div>
+      </div>
+
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="footer-right">
+            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+              <img class="iconXS hoverGrey300" src="../icon/in.svg" alt="LinkedIn">
+            </a>
+            <a target="_blank" href="https://github.com/vicky-wyq">
+              <img class="iconXS hoverGrey300" src="../icon/git.svg" alt="GitHub" title="GitHub">
+            </a>
+            <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+              <img class="iconXS hoverGrey300" src="../icon/Codepen.svg" alt="CodePen">
+            </a>
+            <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
+              <img class="iconXS hoverGrey300" src="../icon/ins.svg" alt="Instagram" title="Instagram">
+            </a>
+          </div>
         </div>
       </div>
     </div>
+    <div class="blankHS"></div>
+    <div class="blankPhone"></div>
+
   </footer>
   <!--footer-->
 
