--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -1068,7 +1068,7 @@
               </div>
             </div>
           </div>
-          <div class="blankHXS"></div>
+          <div class="blankHM"></div>
 
           <!-- Arrow -->
           <div class="Grid Grid--full">
@@ -1143,11 +1143,105 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="blockS blackLess displayNone">HEX 161616</div>
+                <div class="blockS blackLess displayNone"> - </div>
               </div>
             </div>
           </div>
-          <div class="blankHS"></div>
+          <div class="blankHM"></div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Spacing <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters Grid--cols-6 Grid--bottom wrapper">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing6 iconL"></div>
+                <p>3 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing5 iconL"></div>
+                <p>2.5 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing4 iconL"></div>
+                <p>2 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing3 iconL"></div>
+                <p>1.5 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing2 iconL"></div>
+                <p>1 em</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="WarmBg spacing1 iconL"></div>
+                <p>0.5 em</p>
+              </div>
+            </div>
+          </div>
+          <div class="blankHM"></div>
+
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Border Radius <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Testing borderRadiusXS"></div>
+                <p>XS 4 px &#47; 0.25 em</p>
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Testing borderRadiusS"></div>
+                <p>S 8 px &#47; 0.5 em</p>
+
+              </div>
+            </div>
+            <div class="Grid-cell borderRadiusM">
+              <div class="element">
+                <div class="Testing borderRadiusM"></div>
+                <p>M 16 px &#47; 1 em</p>
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="Testing borderRadiusL"></div>
+                <p>L 24 px &#47; 1.5 em</p>
+
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
         </div>
       </section>
       <section id="content22">
@@ -1714,6 +1808,19 @@
           </div>
         </div>
         <div class="blankHXS"></div>
+
+
+
+
+
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="element">
+            <h2 class="tArrow">Border Radius <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+            </h2>
+          </div>
+        </div>
+        <!-- Arrow -->
         <!-- Arrow -->
         <div class="wrapper">
           <div class="element">
@@ -2446,7 +2553,8 @@
           <!-- Arrow -->
           <div class="wrapper">
             <div class="element">
-              <h2 class="tArrow">Card - with Link <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              <h2 class="tArrow">Hover card - with Link <img class="seArrow" src="../icon/arrow-se.svg"
+                  alt="icon arrow">
               </h2>
             </div>
           </div>
@@ -2491,7 +2599,55 @@
               </div>
             </div>
           </div>
+          <!-- Arrow -->
+          <div class="blankHM"></div>
+
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Hover card - without Link <img class="seArrow" src="../icon/arrow-se.svg"
+                  alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="Grid Grid--gutters Grid--cols-2">
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="shadowBox">
+                    <img src="../Placeholder.svg" alt="Placeholder">
+                    <div class="element">
+                      <div class="element">
+                        <h5>Lorem</h5>
+                        <h3><strong>Lorem ipsum</strong> </h3>
+                        <p class="lineHorizAll"></p>
+                        <h6> Lorem ipsum dolor sit amet</h6>
+                        <h6> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="Grid-cell">
+                <div class="element">
+                  <div class="shadowBox">
+                    <img src="../Placeholder.svg" alt="Placeholder">
+                    <div class="element">
+                      <div class="element">
+                        <h5>Lorem</h5>
+                        <h3><strong>Lorem ipsum</strong> </h3>
+                        <p class="lineHorizAll"></p>
+                        <h6> Lorem ipsum dolor sit amet</h6>
+                        <h6> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+
         <div class="blankHM"></div>
 
       </section>
@@ -3197,11 +3353,11 @@
 
     <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
       <div class="Grid-cell">
+        <div class="element">
           <div class="element">
-            <div class="element">
 
-          <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
-</div>
+            <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
+          </div>
         </div>
       </div>
 
