--- a/photography/index.html
+++ b/photography/index.html
@@ -199,7 +199,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./Squirrel01.jpg" alt="Appointa">
+            <img src="./Squirrel01.jpg" alt="Wildlife">
             <div class="elementInner">
               <h5>Wildlife</h5>
               <h3>Pacific Grove Rocky View, Monterey, CA </h3>
@@ -220,7 +220,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class=" ShadowBox">
-            <img src="./Squirrel02.jpg" alt="Appointa">
+            <img src="./Squirrel02.jpg" alt="Wildlife">
             <div class="elementInner">
               <h5>Wildlife</h5>
               <h3>Pacific Grove Rocky View, Monterey, CA </h3>
@@ -234,7 +234,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./Squirrel03.jpg" alt="Appointa">
+            <img src="./Squirrel03.jpg" alt="Wildlife">
             <div class="elementInner">
               <h5>Wildlife</h5>
               <h3>Pacific Grove Rocky View, Monterey, CA </h3>
@@ -255,7 +255,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class=" ShadowBox">
-            <img src="./Butterfly01.jpg" alt="Appointa">
+            <img src="./Butterfly01.jpg" alt="Wildlife">
             <div class="elementInner">
               <h5>Wildlife</h5>
               <h3>Monarch Butterfly Sanctuary</h3>
@@ -269,7 +269,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./Butterfly02.jpg" alt="Appointa">
+            <img src="./Butterfly02.jpg" alt="Wildlife">
             <div class="elementInner">
               <h5>Wildlife</h5>
               <h3>Monarch Butterfly Sanctuary</h3>
@@ -289,8 +289,8 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class=" ShadowBox">
-            <img src="./01.jpg" alt="Appointa">
+          <div class="ShadowBox">
+            <img src="./01.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>Bosque Del Apache National Wildlife Refuge</h3>
@@ -304,7 +304,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./02.jpg" alt="Appointa">
+            <img src="./02.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>Bosque Del Apache National Wildlife Refuge</h3>
@@ -329,7 +329,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./15.jpg" alt="Appointa">
+            <img src="./15.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>Yellowstone National Park </h3>
@@ -351,7 +351,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./05.jpg" alt="Appointa">
+            <img src="./05.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>Sacramento National Wildlife Refuge </h3>
@@ -365,7 +365,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./06.jpg" alt="Appointa">
+            <img src="./06.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>Sacramento National Wildlife Refuge </h3>
@@ -386,9 +386,9 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./20.jpg" alt="Appointa">
+            <img src="./20.jpg" alt="Wildlife">
             <div class="elementInner">
-              <h5>Animal</h5>
+              <h5>Wildlife</h5>
               <h3>Yellowstone National Park </h3>
               <p class="lineHorizAll"></p>
               <h6>September, 2020</h6>
@@ -407,7 +407,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./07.jpg" alt="Appointa">
+            <img src="./07.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>Teton National Park </h3>
@@ -428,7 +428,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./09.jpg" alt="Appointa">
+            <img src="./09.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3> White Sands National Monument</h3>
@@ -442,42 +442,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./08.jpg" alt="Appointa">
-            <div class="elementInner">
-              <h5>Nature</h5>
-              <h3> White Sands National Monument</h3>
-              <p class="lineHorizAll"></p>
-              <h6> December, 2019</h6>
-              <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="ShadowBox">
-            <img src="./11.jpg" alt="Appointa">
-            <div class="elementInner">
-              <h5>Nature</h5>
-              <h3> White Sands National Monument</h3>
-              <p class="lineHorizAll"></p>
-              <h6> December, 2019</h6>
-              <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="ShadowBox">
-            <img src="./12.jpg" alt="Appointa">
+            <img src="./08.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3> White Sands National Monument</h3>
@@ -498,7 +463,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./13.jpg" alt="Appointa">
+            <img src="./11.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3> White Sands National Monument</h3>
@@ -512,7 +477,42 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./14.jpg" alt="Appointa">
+            <img src="./12.jpg" alt="Nature">
+            <div class="elementInner">
+              <h5>Nature</h5>
+              <h3> White Sands National Monument</h3>
+              <p class="lineHorizAll"></p>
+              <h6> December, 2019</h6>
+              <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="blankHM"></div>
+  <hr>
+  <div class="blankHM"></div>
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="ShadowBox">
+            <img src="./13.jpg" alt="Nature">
+            <div class="elementInner">
+              <h5>Nature</h5>
+              <h3> White Sands National Monument</h3>
+              <p class="lineHorizAll"></p>
+              <h6> December, 2019</h6>
+              <h6> Canon 5d mark iii | EF 70-200mm f/2.8L IS </h6>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="ShadowBox">
+            <img src="./14.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3> White Sands National Monument</h3>
@@ -534,7 +534,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./19.jpg" alt="Appointa">
+            <img src="./19.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>Yellowstone National Park </h3>
@@ -555,7 +555,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./17.jpg" alt="Appointa">
+            <img src="./17.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>Donner Lake </h3>
@@ -569,7 +569,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./16.jpg" alt="Appointa">
+            <img src="./16.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>Taos Pueblo Indian Reservation </h3>
@@ -590,7 +590,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./03.jpg" alt="Appointa">
+            <img src="./03.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>Sacramento National Wildlife Refuge</h3>
@@ -611,7 +611,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./04.jpg" alt="Appointa">
+            <img src="./04.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>Sacramento National Wildlife Refuge</h3>
@@ -632,7 +632,7 @@
       <div class="Grid-cell">
         <div class="element">
           <div class="ShadowBox">
-            <img src="./10.jpg" alt="Appointa">
+            <img src="./10.jpg" alt="Nature">
             <div class="elementInner">
               <h5>Nature</h5>
               <h3>White Sands National Monument </h3>
